[gd_scene load_steps=3 format=3 uid="uid://cey33ccd7dmk5"]

[ext_resource type="Script" path="res://escenas/menu_pausa.gd" id="1_ihc7t"]
[ext_resource type="FontFile" uid="uid://3y6pr6d5vfk0" path="res://graficos/Daily_Bubble.ttf" id="1_vsxh8"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ihc7t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 667.0
offset_top = 327.0
offset_right = 1264.0
offset_bottom = 717.0
mouse_default_cursor_shape = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TituloMenu" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_vsxh8")
theme_override_font_sizes/font_size = 100
text = "Menú Pausa"

[node name="ButtonReanudar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vsxh8")
theme_override_font_sizes/font_size = 35
text = "Reanudar"

[node name="ButtonControles" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vsxh8")
theme_override_font_sizes/font_size = 35
text = "Controles"

[node name="ButtonMenuPrincipal" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vsxh8")
theme_override_font_sizes/font_size = 35
text = "Menú principal"

[connection signal="pressed" from="VBoxContainer/ButtonReanudar" to="." method="_on_button_reanudar_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonControles" to="." method="_on_button_controles_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMenuPrincipal" to="." method="_on_button_menu_principal_pressed"]
